--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky install",
+    "test": "exit 0"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
@@ -25,7 +27,8 @@
     "@types/react-native": "~0.70.6",
     "eslint": "^8.27.0",
     "eslint-plugin-json": "^3.1.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "husky": "^8.0.0"
   },
   "private": true
 }
