feat: lint server before commit

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lintClient": "cd ./client && eslint .",
+    "lintServer": "cd ./server && eslint .",
     "prepare": "husky install",
     "test": "exit 0"
   },
